# home-energy-manager

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  FAQ.md  INSTALL.md  LICENSE  NOTIFICATIONS.md  PROBLEM.md  README.md  ROADMAP.md  docker-compose.yml  eslint.config.js  index.html  launch.command  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  simulator-design.md  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  msix-smoke.yml  pages.yml
.opencode/agents/: givenergy-reviewer.md
docs/: index.html  issue-81-wishlist.md
docs/decisions/: 2026-06-15-why-gateway-is-not-the-right-approach-for-parallel-aios.md
docs/plans/: cost-and-tariff-rates-plan.md
docs/register-audit/: README.md  battery-meter.md  single-phase.md  three-phase-gateway-ems.md
e2e/: agile-slot.spec.ts  aio.spec.ts  backend.ts  binary-path.ts  charts.spec.ts  control.spec.ts  crc16.ts  fixture.ts  force-stop.spec.ts  global-setup.ts  history-cost.spec.ts  local-agile-slot.spec.ts  local-aio.spec.ts  local-battery-page.spec.ts  local-charts.spec.ts  local-control-page.spec.ts  local-dongle-misbehaviour.spec.ts  local-evc-session-energy.spec.ts  local-fixture.ts  local-force-duration.spec.ts  local-force-stop.spec.ts  local-gateway-test.mjs  local-global-setup.ts  local-history-page.spec.ts  local-inverter-page.spec.ts  local-inverter-temperature-alert.spec.ts  local-issue-137-discharge-slot-backup.spec.ts  local-logs-page.spec.ts  local-meters-page.spec.ts  local-navigation.spec.ts  local-power-page.spec.ts  local-readonly.spec.ts  local-settings-page.spec.ts  local-solar-arrays.spec.ts  local-solar-page.spec.ts  local-status-page.spec.ts  local-support-bundle.spec.ts  mock-modbus.ts  pv2-after-sunset.spec.ts  test-settings.mjs  (+1 more)
public/: manifest.json
scripts/: backfill-history.py  check-versions.sh  install-dev-desktop.sh  package-msix.ps1  prepare-msix.py  run-with-software-renderer.sh
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  support-secrets.local.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: regdump.rs
src-tauri/msix/: Package.appxmanifest
src-tauri/permissions/: allow-autostart-fallback.toml
src-tauri/src/: lib.rs  main.rs  octopus.rs  test_util.rs  windows_autostart.rs
src-tauri/src/alerts/: mod.rs  report.rs  whatsapp.rs  whatsapp_store.rs
src-tauri/src/evc/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/inverter/: decoder.rs  discovery.rs  encoder.rs  mod.rs  model.rs  poll.rs  reconnect.rs  sanitizer.rs  state_machines.rs
src-tauri/src/modbus/: client.rs  framer.rs  registers.rs
src-tauri/src/server/: api.rs  logs.rs  mini.html  mini.rs  mod.rs  ws.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/support/: mod.rs
src-tauri/src/weather/: mod.rs
src-tauri/tests/: e2e_mock.rs  headless_smoke.rs
src/components/: AwaitingConnection.tsx  BatteryGauge.tsx  BatteryModeSummary.tsx  BatteryPanel.tsx  BatterySocChart.tsx  ColdBatteryWarning.tsx  EnergyFlowDiagram.tsx  EnergyOrbitDiagram.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  SolarPowerChart.tsx  SummaryTiles.tsx
src/hooks/: useAction.test.tsx  useAction.ts  useGridOutageNotifications.ts  useIsMobile.ts  useReconnect.ts  useWebSocket.ts
src/lib/: api.ts  awaitingConnection.ts  batteryMode.ts  chartDomain.ts  chartSeries.test.ts  chartSeries.ts  costChart.ts  deviceCapabilities.test.ts  deviceCapabilities.ts  dischargeSlotBackup.ts  energyFlow.ts  evcLabel.ts  format.test.ts  format.ts  gridFault.ts  historyRangeConfig.ts  logarithmicRange.ts  meters.ts  octopusExport.ts  octopusPdfDownload.ts  octopusSeries.ts  openExternal.ts  solarArrays.ts  tariff.ts  temperatureChart.ts  types.ts  validators.ts
src/pages/: BatteryPage.tsx  ControlPage.tsx  HistoryPage.tsx  InverterPage.tsx  LogsPage.tsx  MetersPage.tsx  OctopusPage.tsx  PowerPage.tsx  SettingsPage.tsx  SolarPage.tsx  StatusPage.tsx  forceDuration.test.ts  forceDuration.ts  powerReport.ts
src/store/: useInverterStore.ts
src/types/: energyFlow.ts
tests/: App.test.tsx  setup.ts
tests/components/: BatteryModeSummary.test.tsx  BatteryPanel.test.tsx  BatterySocChart.test.tsx  ColdBatteryWarning.test.tsx  EnergyFlowDiagram.test.tsx  EnergyOrbitDiagram.test.tsx  ErrorBoundary.test.tsx  SolarPowerChart.test.tsx  SummaryTiles.test.tsx
tests/hooks/: useAction.test.tsx  useGridOutageNotifications.test.ts  useReconnect.test.tsx  useWebSocket.test.ts
tests/lib/: api.test.ts  batteryMode.test.ts  chartDomain.test.ts  chartSeries.test.ts  costChart.test.ts  deviceCapabilities.test.ts  e2eBinaryPath.test.ts  energyFlow.test.ts  energyOrbitCss.test.ts  evcNodeLabel.test.ts  fetchHistory.test.ts  format.test.ts  gridFault.test.ts  gridLineWeightConsumers.test.ts  gridLineWeightCss.test.ts  historyRangeConfig.test.ts  logarithmicRange.test.ts  meters.test.ts  octopusExport.test.ts  octopusSeries.test.ts  powerReport.test.ts  solarArrays.test.ts  tariff.test.ts  temperatureChart.test.ts  testSettingsFixture.test.ts  validators.test.ts
tests/pages/: BatteryPage.test.tsx  HistoryPage.test.tsx  LogsPage.test.tsx  MetersPage.test.tsx  OctopusPage.test.tsx  PowerPage.test.tsx  SettingsPage.test.tsx  StatusPage.test.tsx  awaitingConnection.test.tsx  batteryGauge.test.tsx  connectionIndicatorMobile.test.tsx  connectionIndicatorReconnect.test.tsx  controlPageAgilePrice3dp.test.tsx  controlPageAgileScope.test.tsx  (+27 more)
(+17 files in other folders)
