[package]
name = "givenergy-local"
version = "0.22.1"
description = "Local monitoring and control for GivEnergy solar/battery inverters"
authors = ["Stuart Harding"]
license = "MIT"
repository = "https://github.com/psylsph/home-energy-manager"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.31"
tauri = { version = "2.11.2", features = ["image-png"] }
tauri-plugin-log = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CRC for Modbus
crc = "3"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Octopus API
ureq = { version = "3", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures utilities (join_all for discovery)
futures-util = "0.3"

# Network interface detection
local-ip-address = "0.6"

# SQLite for history storage
rusqlite = { version = "0.40.0", features = ["bundled"] }

# Efficient mutex for log ring
parking_lot = "0.12"

# TCP socket options (keepalive)
socket2 = { version = "0.6.4", features = ["all"] }
dirs = "6"
tokio-modbus = "0.17.0"
