[package]
name = "givenergy-local"
version = "0.28.8"
description = "Home Energy Manager — Monitor and control GivEnergy inverters"
authors = ["Stuart Harding"]
edition = "2021"

[dependencies]
# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WhatsApp store backend
hex = "0.4"
async-trait = "0.1"
bytes = "1"

log = "0.4.31"
tauri = { version = "2.11.2", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"

# WhatsApp Web client (native Rust, QR pairing)
# Uses a custom rusqlite-backed store (whatsapp_store.rs) for persistence.
# The upstream sqlite-storage feature pulls in diesel+r2d2 which conflicts
# with rusqlite (disk I/O errors). Custom store uses rusqlite directly.
whatsapp-rust = { version = "0.6", default-features = false, features = ["tokio-runtime", "tokio-transport", "ureq-client", "signal"] }
whatsapp-rust-tokio-transport = "0.6"
whatsapp-rust-ureq-http-client = "0.6"
wacore = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CRC for Modbus
crc = "3"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Octopus API
ureq = { version = "3", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures utilities (join_all for discovery)
futures-util = "0.3"

# Network interface detection
local-ip-address = "0.6"

# SQLite for history storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Efficient mutex for log ring
parking_lot = "0.12"

# TCP socket options (keepalive)
socket2 = { version = "0.6.4", features = ["all"] }
dirs = "6"
tokio-modbus = "0.17.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
