[package]
name = "givenergy-local"
version = "0.54.0"
description = "Home Energy Manager — Monitor and control GivEnergy inverters"
authors = ["Stuart Harding"]
edition = "2021"

[lib]
name = "givenergy_local"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.31"
tauri = { version = "2.11.2", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
# tauri-plugin-autostart: write the platform-appropriate autostart entry
# (HKCU\...\Run on Windows, LaunchAgent on macOS, ~/.config/autostart/*.desktop
# on Linux) so the user can flip a single "Start on login" toggle in the
# Settings page instead of digging into OS settings (issue #117).
tauri-plugin-autostart = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7.0", features = ["cors", "fs"] }

# CRC for Modbus
crc = "3"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Octopus API
ureq = { version = "3", features = ["json"] }
percent-encoding = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures utilities (join_all for discovery)
futures-util = "0.3"

# Network interface detection
local-ip-address = "0.6"

# SQLite for history storage
rusqlite = { version = "0.40.1", features = ["bundled"] }

# Efficient mutex for log ring
parking_lot = "0.12"

# TCP socket options (keepalive)
socket2 = { version = "0.6.4", features = ["all"] }
dirs = "6"
tokio-modbus = "0.17.0"

[dev-dependencies]
# Property-based testing for the sanitizer's delta-check edge cases
# (near-zero prev, time-aware ceiling, jitter tolerance, release counters).
proptest = "1"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
